--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Creative.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Creative.cshtml
@@ -9,7 +9,7 @@
     }
 </script>
 }
-<h2>External Accounts - Raw Stats</h2>
+<h2>External Accounts - Raw Stats, by creative</h2>
 <div style="margin-bottom:10px">
 <form>
     @Html.DropDownList("month", (SelectList)ViewBag.ChooseMonthSelectList, new { onchange = "ChangeMonth(this.value)" })
@@ -18,10 +18,9 @@
 
 <table>
 <tr>
-    <th>more...</th>
-    <th>Partner</th>
-    <th style="text-align:right">ID</th>
     <th>Ext Account</th>
+    <th style="text-align:right">ID</th>
+    <th>Creative</th>
     <th>Impressions</th>
     <th>Clicks</th>
     <th>CTR</th>
@@ -36,23 +35,9 @@
 @foreach (var stat in Model.Stats)
 {
 <tr>
-    <td>by:@Html.ActionLink("strat", "Strategy", new { acctId = stat.ExtAccount.Id, month = Model.MonthString })|@Html.ActionLink("creat", "Creative", new { acctId = stat.ExtAccount.Id, month = Model.MonthString })</td>
-    <td>@stat.ExtAccount.Platform.Name</td>
-    <td style="text-align:right">@stat.ExtAccount.Id</td>
-    <td>
-        @if (stat.ExtAccount.Platform.Code == Platform.Code_AdRoll)
-        {
-            @Html.ActionLink(stat.ExtAccount.Name, "AdRoll", new { advEid = stat.ExtAccount.ExternalId, month = Model.MonthString })
-        }
-        else if (stat.ExtAccount.Platform.Code == Platform.Code_DBM)
-        {
-            @Html.ActionLink(stat.ExtAccount.Name, "DBM", new { ioID = stat.ExtAccount.ExternalId, month = Model.MonthString })
-        }
-        else
-        {
-            @stat.ExtAccount.Name
-        }
-    </td>
+    <td>(@stat.TDad.ExtAccount.Platform.Name) @stat.TDad.ExtAccount.Name</td>
+    <td style="text-align:right">@stat.TDad.Id</td>
+    <td><b>@stat.TDad.Name</b> (@stat.TDad.ExternalId)</td>
     <td style="text-align:right">@stat.Impressions</td>
     <td style="text-align:right">@stat.Clicks</td>
     <td style="text-align:center">@stat.CTR</td>
@@ -69,7 +54,6 @@
 {
     var tot = Model.StatsTotal;
 <tr>
-    <th></th>
     <th></th>
     <th></th>
     <th>@tot.Name</th>
