--- a/3/DirectAgents.Reporting/DirectAgents.Reporting/DA - Trading Desk Report.rdl
+++ b/3/DirectAgents.Reporting/DirectAgents.Reporting/DA - Trading Desk Report.rdl
@@ -1222,7 +1222,7 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
                                 <Paragraph>
                                   <TextRuns>
                                     <TextRun>
-                                      <Value>=Sum(Fields!eCPC.Value)</Value>
+                                      <Value>=Code.SafeFraction(Sum(Fields!MediaSpend.Value), Sum(Fields!Clicks.Value))</Value>
                                       <Style>
                                         <FontFamily>Calibri</FontFamily>
                                         <FontSize>11pt</FontSize>
@@ -2567,7 +2567,7 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
                                 <Paragraph>
                                   <TextRuns>
                                     <TextRun>
-                                      <Value>=Sum(Fields!eCPC.Value)</Value>
+                                      <Value>=Code.SafeFraction(Sum(Fields!MediaSpend.Value), Sum(Fields!Clicks.Value))</Value>
                                       <Style>
                                         <FontFamily>Calibri</FontFamily>
                                         <FontSize>11pt</FontSize>
@@ -3971,7 +3971,7 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
             </PageBreak>
             <PageName>Executive Summary</PageName>
             <KeepTogether>true</KeepTogether>
-            <Left>0in</Left>
+            <Top>0in</Top>
             <Height>7.83917in</Height>
             <Width>7.96875in</Width>
             <Style>
@@ -4514,7 +4514,7 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
                                                   <Paragraph>
                                                     <TextRuns>
                                                       <TextRun>
-                                                        <Value>=IIf(CountRows() = 0, 0, Sum(Fields!eCPC.Value))</Value>
+                                                        <Value>=IIf(CountRows() = 0, 0, Code.SafeFraction(Sum(Fields!MediaSpend.Value), Sum(Fields!Clicks.Value)))</Value>
                                                         <Style>
                                                           <FontFamily>Calibri</FontFamily>
                                                           <FontSize>11pt</FontSize>
@@ -4720,7 +4720,7 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
                                   </Filters>
                                   <Top>0.25in</Top>
                                   <Height>0.5in</Height>
-                                  <Width>7.96875in</Width>
+                                  <Width>7.96876in</Width>
                                   <Style>
                                     <Border>
                                       <Style>None</Style>
@@ -5298,7 +5298,6 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
             <PageName>Strategy Summary</PageName>
             <KeepTogether>true</KeepTogether>
             <Top>7.83917in</Top>
-            <Left>0in</Left>
             <Height>2.64583in</Height>
             <Width>7.96875in</Width>
             <ZIndex>1</ZIndex>
@@ -6410,7 +6409,6 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
                                 <PaddingBottom>2pt</PaddingBottom>
                               </Style>
                             </Textbox>
-                            <rd:Selected>true</rd:Selected>
                           </CellContents>
                         </TablixCell>
                       </TablixCells>
@@ -6483,7 +6481,6 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
             <PageName>Creative Performance</PageName>
             <KeepTogether>true</KeepTogether>
             <Top>13.41208in</Top>
-            <Left>0in</Left>
             <Height>1.26042in</Height>
             <Width>7.96875in</Width>
             <ZIndex>2</ZIndex>
@@ -7140,7 +7137,6 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
             <PageName>Top 50 Site List MTD</PageName>
             <KeepTogether>true</KeepTogether>
             <Top>14.6725in</Top>
-            <Left>0in</Left>
             <Height>0.625in</Height>
             <Width>7.96875in</Width>
             <ZIndex>3</ZIndex>
@@ -7858,7 +7854,6 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
             <PageName>Lead IDs</PageName>
             <KeepTogether>true</KeepTogether>
             <Top>15.2975in</Top>
-            <Left>0in</Left>
             <Height>0.625in</Height>
             <Width>7.96875in</Width>
             <ZIndex>4</ZIndex>
@@ -8383,7 +8378,7 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
                                 <Paragraph>
                                   <TextRuns>
                                     <TextRun>
-                                      <Value>=Sum(Fields!eCPC.Value)</Value>
+                                      <Value>=Code.SafeFraction(Sum(Fields!MediaSpend.Value), Sum(Fields!Clicks.Value))</Value>
                                       <Style>
                                         <FontFamily>Calibri</FontFamily>
                                         <FontSize>11pt</FontSize>
@@ -8698,7 +8693,7 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
                                 <Paragraph>
                                   <TextRuns>
                                     <TextRun>
-                                      <Value>=Sum(Fields!eCPC.Value)</Value>
+                                      <Value>=Code.SafeFraction(Sum(Fields!MediaSpend.Value), Sum(Fields!Clicks.Value))</Value>
                                       <Style>
                                         <FontFamily>Calibri</FontFamily>
                                         <FontSize>11pt</FontSize>
@@ -9188,7 +9183,6 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
               </Paragraphs>
               <rd:DefaultName>Textbox13</rd:DefaultName>
               <Top>1.05973in</Top>
-              <Left>0in</Left>
               <Height>0.39861in</Height>
               <Width>7.96875in</Width>
               <Style>
@@ -9205,7 +9199,6 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
             <Image Name="Image1">
               <Source>External</Source>
               <Value>DirectAgentsDigitalMarketingHeader.jpg</Value>
-              <Left>0in</Left>
               <Height>0.90625in</Height>
               <Width>7.96875in</Width>
               <ZIndex>1</ZIndex>
@@ -9317,7 +9310,6 @@ WHERE (td.Advertiser.Id = @AdvertiserId)</CommandText>
               </Paragraphs>
               <rd:DefaultName>Textbox13</rd:DefaultName>
               <Top>0.01388in</Top>
-              <Left>0in</Left>
               <Height>0.26736in</Height>
               <Width>2.32292in</Width>
               <ZIndex>2</ZIndex>
