--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
@@ -48,7 +48,7 @@ table th,td {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="@Url.Action("Index", "Campaigns")">Home(Campaigns)</a>
+        <a class="navbar-brand" href="@Url.Action("Dashboard", "Campaigns")">CampaignDashboard</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
@@ -58,7 +58,8 @@ table th,td {
                 <ul class="dropdown-menu">
                     <li><a href="@Url.Action("PacingGrid", "CampStats")">Budget & Pacing</a></li>
                     <li><a href="@Url.Action("PerformanceGrid", "CampStats")">Performance</a></li>
-                    <li><a href="@Url.Action("Links", "Main")">Other</a></li>
+                    <li><a href="@Url.Action("Pacing", "CampStats")">HTML - B & P</a></li>
+                    <li><a href="@Url.Action("Pacing", "CampStats", new { showPerfStats = true })">HTML - Perf</a></li>
                 </ul>
             </li>
             <li class="dropdown">
