--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/ExtAccounts/UploadStats.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/ExtAccounts/UploadStats.cshtml
@@ -7,15 +7,19 @@
 
 Partner: @Model.Platform.Name<br />
 ExtAccount: @Model.Name
-<br /><br />
+<br />
 
 <div id="filesMessage" style="margin: 0px 0px 18px 5px"></div>
 
 <form method="post" action="@url" enctype="multipart/form-data">
     <div>
         Stats Type:
-        @Html.DropDownList("statsType", new SelectList(statsTypeList))
+        @Html.DropDownList("statsType", new SelectList(statsTypeList), new { style = "height:30px" })
         <br /><br />
+        <div id="divStatsDate" style="display:none">
+            Month: <input id="statsDate" name="statsDate" type="text" /> (leave blank if "Month" column exists in file)
+            <br /><br />
+        </div>
         <input id="fileUpload" name="file" type="file" />
     </div>
 </form>
@@ -25,23 +29,35 @@ ExtAccount: @Model.Name
 
 <script>
     $(function () {
+        var today = new Date();
+        //var firstOfMonth = new Date(today.getFullYear(), today.getMonth());
+        var firstOfMonth = "";
+        $("#statsDate").kendoDatePicker({ start: "year", depth: "year", format: "M/1/yyyy", value: firstOfMonth, footer: ' ' });
+
         $("#fileUpload").kendoUpload({
             async: {
                 saveUrl: "@url",
                 autoUpload: false
             },
             localization: {
-                select: "Upload&nbsp;file...",
+                select: "Select&nbsp;file...",
                 uploadSelectedFiles: "Upload and Process"
             },
             multiple: false,
             upload: OnUpload,
             complete: UploadComplete
         });
+        $('#statsType').change(OnStatsTypeChange);
     });
 
+    function OnStatsTypeChange() {
+        if ($('#statsType').val() == "Site")
+            $('#divStatsDate').show();
+        else
+            $('#divStatsDate').hide();
+    }
     function OnUpload(e) {
-        e.data = { statsType: $('#statsType').val() };
+        e.data = { statsType: $('#statsType').val(), statsDate: $('#statsDate').val() };
     }
     function UploadComplete() {
         $('#filesMessage').html('Done processing.');
