added regular expression to value inputs

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/BudgetInfos/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/BudgetInfos/Edit.cshtml
@@ -97,8 +97,10 @@
 
 <script>
     function SaveBudgetInfo() {
+        $('#MediaSpend').val($('#MediaSpend').val().toString().replace(/\$/g, '').replace(/\,/g, ''));
         $('#formBudgetInfo').submit();
         $('#divSave').hide();
         $('#divSaveMessage').html("<i>Saving...</i>");
     }
 </script>
+
