--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/Daily.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/Daily.cshtml
@@ -12,7 +12,7 @@ Campaign: @camp.Name
     <div id="spreadsheet" style="width:950px"></div>
 </div>
 <br />
-@Html.ActionLink("Reporting Home", "Home", "Reports", new { campId = camp.Id }, null)
+@Html.ActionLink("Back", "Home", "Reports", new { campId = camp.Id }, null)
 
 @section scripts {
 <script>
