--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/DailyChart.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/DailyChart.cshtml
@@ -13,7 +13,7 @@ Campaign: @Model.Name
     <button id="btnExportPDF">Save as PDF</button>
 </div>
 <br />
-@Html.ActionLink("Reporting Home", "Home", "Reports", new { campId = Model.Id }, null)
+@Html.ActionLink("Back", "Home", "Reports", new { campId = Model.Id }, null)
 
 @section scripts {
 <script>
