--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Reports/Home.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Reports/Home.cshtml
@@ -2,11 +2,11 @@
 @{
     var start = DateTime.Today.FirstDayOfMonth(-1);
 }
-<h2>Reporting</h2>
+<h2>Report Components</h2>
 
 Advertiser: @Model.Advertiser.Name<br />
 Campaign: @Model.Name
 <br /><br />
 
 @Html.ActionLink("Daily Stats", "Daily", "CampStats", new { campId = Model.Id, start = start.ToRouteString() }, null) |
-@Html.ActionLink("Chart", "DailyChart", "CampStats", new { campId = Model.Id }, null)
+@Html.ActionLink("Daily Chart", "DailyChart", "CampStats", new { campId = Model.Id }, null)
